--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Untagges 20220903 JP
+  - Move ACCESS wide stuff to ACCESS_wide directory
+
 Untagges 20220831 JP
   - Add ACCESS_Master_Brand_Logos
   - Add previsously customized logos
