--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.2.1 TBD      JP
+  - Define btn-access-primary in _styles_access.scss
+
 v0.2.0 20221118 JP
   - Implement ACCESS wide universal NAV and FOOTER
   - Implement menus using Superfish
