--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.0 20230210      Dinuka De Silva
+  - Improve the styles in the navigation
+
 v0.2.1 TBD      JP
   - Define btn-access-primary in _styles_access.scss
 
