Updated the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.1 20230215      Dinuka De Silva
+  - Improve the breadcrumb and styles
+
 v0.3.0 20230210      Dinuka De Silva
   - Improve the styles in the navigation
 
