Update the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.2 20230222      Dinuka De Silva
+  - Improve the home page
+
 v0.3.1 20230215      Dinuka De Silva
   - Improve the breadcrumb and styles
 
