Updated the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.3 20230228      Dinuka De Silva
+  - Improve styles and remove twig nodes
+
 v0.3.2 20230222      Dinuka De Silva
   - Improve the home page
 
