--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.4 20230302      Dinuka De Silva
+  - Improve typography styles
+
 v0.3.4 20230228      Dinuka De Silva
   - Adding `container` class to node content
 
