--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.3.6 20230307      Dinuka De Silva
+  - Style changes to breadcrumb, buttons and colors
+  - Adding the home page images
+
 v0.3.5 20230302      Dinuka De Silva
   - Improve typography styles
 
