--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v0.3.7 20230308      Dinuka De Silva
+  - Adding home page images
+  - Adding domain global navigation
+  - Header style improvements
+
 v0.3.6 20230307      Dinuka De Silva
   - Style changes to breadcrumb, buttons and colors
   - Adding the home page images
