Updated the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.3.10 20230315      Dinuka De Silva
+  - Fix accordion styles
+  - Adding ticket upgrade notice
+
 v0.3.9 20230315      Dinuka De Silva
   - Fix link styles and adding styles for H4
   - Adding cybersecurity and data networking banner images
