--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.10 20230317      Dinuka De Silva
+  - Adding Operational Support banner image
+
 v0.3.10 20230315      Dinuka De Silva
   - Fix accordion styles
   - Adding ticket upgrade notice
