--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.xx 2023xxxx      JP Navarro
+  - Add Logos/ACCS050322_ACCESS_Brand_OperationsBeta-RGB.jpg for Beta/Stating site
+
 v0.3.11 20230317      Dinuka De Silva
   - Adding Operational Support banner image
 
