Update the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.12 20230317      Dinuka De Silva
+  - Adding Community Support Icons
+
 v0.3.xx 2023xxxx      JP Navarro
   - Add Logos/ACCS050322_ACCESS_Brand_OperationsBeta-RGB.jpg for Beta/Stating site
   - Add b5_ac_conect/logos/ACCS050322_ACCESS_Brand_Operations-RGB_Beta*.png for Beta/Staging site
