--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.13 20230317      Dinuka De Silva
+  - Subdomain nav style improvements
+
 v0.3.12 20230317      Dinuka De Silva
   - Adding Community Support Icons
 
