--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 v0.3.13 20230317      Dinuka De Silva
+  - Adding community support icons
+
+v0.3.13 20230317      Dinuka De Silva
   - Subdomain nav style improvements
 
 v0.3.12 20230317      Dinuka De Silva
