Updated the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.15 20230328      Dinuka De Silva
+  - Improving the footer
+
 v0.3.14 20230317      Dinuka De Silva
   - Adding community support icons
 
