Updated the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
+v0.3.16 20230328      Dinuka De Silva
+  - Improving header and footer styles
+
 v0.3.15 20230328      Dinuka De Silva
-  - Improving the footer
+    - Improving the footer
 
 v0.3.14 20230317      Dinuka De Silva
   - Adding community support icons
