--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.18 20230405      Dinuka De Silva
+  - Updated Styles
+
 v0.3.17 20230328      Dinuka De Silva
   - Move the notices from node twig to blocks
 
