--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.19 20230406      Dinuka De Silva
+  - Custom styles for JQuery UI Accordion view
+
 v0.3.18 20230405      Dinuka De Silva
   - Updated Styles
 
