Updated the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.20 20230411      Dinuka De Silva
+  - Adding integration road map banner
+
 v0.3.19 20230406      Dinuka De Silva
   - Custom styles for JQuery UI Accordion view
 
