--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
+v0.3.21 20230411      Dinuka De Silva
+  - Fix icon names
+
 v0.3.20 20230411      Dinuka De Silva
-  - Adding integration road map banner
+- Adding integration road map banner
 
 v0.3.19 20230406      Dinuka De Silva
   - Custom styles for JQuery UI Accordion view
