--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.22 20230501      Dinuka De Silva
+  - Adding STEP-23 cohort profile pictures
+
 v0.3.21 20230411      Dinuka De Silva
   - Fix icon names
 
