--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.23 20230516      Dinuka De Silva
+  - Improve h3 styles on dark background
+
 v0.3.22 20230501      Dinuka De Silva
   - Adding STEP-23 cohort profile pictures
 
