--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.24 20230601      Dinuka De Silva
+  - Adding header icon classes
+
 v0.3.23 20230516      Dinuka De Silva
   - Improve h3 styles on dark background
 
