--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.25 20230601      Dinuka De Silva
+  - Improve header and footer styles
+
 v0.3.24 20230601      Dinuka De Silva
   - Adding header icon classes
 
