Improve header styles

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.26 20230719      Dinuka De Silva
+  - Improve header styles
+
 v0.3.25 20230601      Dinuka De Silva
   - Improve header and footer styles
 
