Update the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.27 20240201      Dinuka De Silva
+  - Fix the header menu link styles
+
 v0.3.26 20230719      Dinuka De Silva
   - Improve header styles
 
