Update the change log

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v0.3.28 20240220      Dinuka De Silva
+  - Improve header styles
+  - Update the logo
+  - Update the footer according to new style guide
+
 v0.3.27 20240201      Dinuka De Silva
   - Fix the header menu link styles
 
