--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.29 20240305      Dinuka De Silva
+  - Enable NSF link from the branding logo
+
 v0.3.28 20240220      Dinuka De Silva
   - Improve header styles
   - Update the logo
