Add ACCESS Operations BETA Logo

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.32 20240313      JP Navarro
+  - Add ACCESS Operations BETA Logo
+
 v0.3.31 20240312      Dinuka De Silva
   - Fix social icons
   - Enable link text to be selectable
