Adding the `Glossary` and `Site Map` links to the footer
# Conflicts:
#	CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.33 20240321      Dinuka De Silva
+  - Adding the `Glossary` and `Site Map` links to the footer
+
 v0.3.32 20240313      JP Navarro
   - Add ACCESS Operations BETA Logo
 
