Update the changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.34 20240502      Dinuka De Silva
+  - Fix the header alignments
+
 v0.3.33 20240321      Dinuka De Silva
   - Adding the `Glossary` and `Site Map` links to the footer
 
