--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.35 20240801      Dinuka De Silva
+  - Fix "Acceptable Use Policy" link
+
 v0.3.34 20240502      Dinuka De Silva
   - Fix the header alignments
 
