Upgrade access-ci-ui to 0.3.0-beta3

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.3.39 20241009      Dinuka De Silva
+  - Upgrade access-ci-ui to 0.3.0-beta3
+
 v0.3.38 20241008      Dinuka De Silva
   - Adding the access-ci-ui components
 
