--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.4.0 20251204      Dinuka De Silva
+  - Upgrading access-ci/ui to `0.13.1`
+
 v0.3.46 20240521      Dinuka De Silva
   - Fix the session validation
 
