--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.4.0 20251217      Dinuka De Silva
+  - Fix the QA bot
+
 v0.4.0 20251204      Dinuka De Silva
   - Upgrading access-ci/ui to `0.13.1`
 
