--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.5.0 20260121      Dinuka De Silva
+  - Making “Add another item” in infrastructure news posting form color yellow (CTT-858)
+  - Upgrade @access-ci/ui version to 0.15.0 (CTT-860)
+
 v0.4.2 20251217      Dinuka De Silva
   - Disabling the QA bot
 
